# long

./: .gitignore  .pre-commit-config-github-actions.yaml  .pre-commit-config.yaml  .python-version  LICENSE  README.md  custom-bash-prompt-for-demos.sh  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: docker-hub.yml  pre-commit.yml
app/: Dockerfile  app.py
docs/: README.md  _sidebar.md  adding_data.md  advanced.md  contributing.md  getting_started.md  index.html  infrastructure.md  installation.md  troubleshooting.md
generate_chat_text/: main_collection.json  normalised_thread_pool.json
jupyterlab/: jupyter_server_config.py
misc/: print_banner.py
misc/figs/: dummy-data.xlsx  estimates-per-milestone.xlsx
nginx/config/: nginx.conf
nginx/docker/: Dockerfile
nginx/static/: index.html
src/: Dockerfile  app.py  requirements.txt
src/data/: catalogue.py  lorem_ipsum_wrapper.py  random_data.py  source.py  tl_generation_wrapper.py
src/figures/: timeline.py
src/long/: app.py
src/long/assets/: 10_timeline_table.css
src/long/data/: catalogue.py  gptchat_data.py  gptchat_generator.py  gptchat_resampler.py  lorem_ipsum_wrapper.py  random_data.py  source.py  tl_generation_wrapper.py
src/long/data/utils/: gptchat_generator.py  gptchat_resampler.py
src/long/figures/: timeline.py  timeline_table.py
src/long/webgui/: base.py  header.py  timeline_fig.py
src/webgui/: base.py  header.py  timeline_fig.py
tests/: test_data_source.py  test_gptchat_data.py  test_gptchat_resampler.py  test_webgui.py
